fix(components): fix spacing

--- a/packages/swirl-components/src/components/swirl-tree-view-item/swirl-tree-view-item.css
+++ b/packages/swirl-components/src/components/swirl-tree-view-item/swirl-tree-view-item.css
@@ -77,6 +77,7 @@
   display: flex;
   margin: 0;
   padding: 0 0 0 var(--s-space-12);
+  padding-top: var(--s-space-2);
   flex-direction: column;
   gap: var(--s-space-2);
 }
